Bug 226872 - Tag tree not expanded with "Tags already assigned" -button
Summary: Tag tree not expanded with "Tags already assigned" -button
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Engine (other bugs)
Version First Reported In: 1.2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-14 19:32 UTC by terri.bugs
Modified: 2012-06-27 10:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description terri.bugs 2010-02-14 19:32:12 UTC
Version:            (using KDE 4.3.2)
OS:                Linux
Installed from:    Ubuntu Packages

With digikam 1.1 the tag tree is expanded when one clicks the "Tags already assigned" -button. With Version 1.2.0 (rev.: 1089969) only the tags directly below "My Tags" are shown and one has to manually open each hierarchy to see which tags are assigned. I would like see the tag tree expanded automatically as in 1.1.
Comment 1 Johannes Wienke 2010-02-14 20:55:03 UTC
SVN commit 1090175 by jwienke:

Expand to all checked tags in ImageDescEditTab if they should be shown only.

BUG: 226872

 M  +2 -3      NEWS  
 M  +12 -0     digikam/albumtreeview.cpp  
 M  +7 -0      digikam/albumtreeview.h  
 M  +4 -0      libs/imageproperties/imagedescedittab.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1090175