Expand to all checked tags in ImageDescEditTab if they should be shown only.

BUG: 226872

svn path=/trunk/extragear/graphics/digikam/; revision=1090175